# webserver

./: .gitignore  CMakeLists.txt
src/: client.cpp  client.h  main.cpp  server.cpp  server.h
src/util/: logger.cpp  logger.hpp
src/worker/: factory.cpp  factory.h
templates/: index.html
